# rdflib-r2r

./: README.md  environment.yml  pyproject.toml  r2r.ipynb  rdb2rdf_test_fixes.md  requirements.txt  sandbox.ipynb  setup.cfg  setup.py  test-results.md  test_example.ipynb
app/: app.py  app_deploy.py
app/templates/: index.html
docs/: conf.py  index.rst  requirements.txt
docs/api/: conf.py  index.rst  rdflib_r2r.r2r_mapping.rst  rdflib_r2r.r2r_store.rst  rdflib_r2r.rst  rdflib_r2r.sparql_op.rst  rdflib_r2r.sql_view.rst  rdflib_r2r.types.rst
docs/test-results/: bsbm-params.pickle  bsbm.md  index.rst  rdb2rdf.md
rdflib_r2r/: __init__.py  r2r_mapping.py  r2r_store.py  sparql_op.py  sql_view.py  types.py
test-results/: bsbm.md  rdb2rdf.md
test-results/duckdb-rdb2rdf/: DirectGraphTC0000.md  DirectGraphTC0001.md  DirectGraphTC0002.md  DirectGraphTC0003.md  DirectGraphTC0004.md  DirectGraphTC0005.md  DirectGraphTC0006.md  DirectGraphTC0007.md  DirectGraphTC0008.md  DirectGraphTC0009.md  DirectGraphTC0010.md  DirectGraphTC0011.md  DirectGraphTC0012.md  DirectGraphTC0013.md  DirectGraphTC0014.md  DirectGraphTC0015.md  DirectGraphTC0016.md  DirectGraphTC0018.md  DirectGraphTC0021.md  DirectGraphTC0022.md  DirectGraphTC0023.md  DirectGraphTC0024.md  DirectGraphTC0025.md  R2RMLTC0000.md  R2RMLTC0001a.md  R2RMLTC0001b.md  R2RMLTC0002a.md  R2RMLTC0002b.md  R2RMLTC0002c.md  R2RMLTC0002d.md  R2RMLTC0002e.md  R2RMLTC0002f.md  R2RMLTC0002g.md  R2RMLTC0002h.md  R2RMLTC0002i.md  (+49 more)
tests/: bsbm_schema.sql  conftest.py  test_bsbm.py  test_rdb2rdf.py  test_thalia.py  util.py
(+274 files in other folders)
