[flake8]
ignore = E501

[aliases]
test=pytest
docs=build_sphinx

[build_sphinx]
project = rdflib_r2r
source-dir = docs
build-dir = docs/_build
all-files = 1
fresh-env = 1

[metadata]
license-file = LICENSE
description-file = README.md

[tool:pytest]
addopts = 
testpaths = tests
markers =
    slow: marks tests as slow
filterwarnings =
    ignore:.*:DeprecationWarning

[mypy]
ignore_missing_imports = True